<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/cardViewMargin"
    android:backgroundTint="@color/colorPrimary"
    android:elevation="@dimen/cardViewMargin"
    android:gravity="center"
    app:cardCornerRadius="@dimen/cardRadius"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/registerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/colorIcons"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/xName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorIcons"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/xRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:gravity="center"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorIcons"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/xRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorIcons"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/xRegisterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:gravity="center"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/colorIcons"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/xRegisterButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:text="@string/register_using_email"
                android:textColor="@color/colorIcons"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center" />


    </LinearLayout>


</android.support.v7.widget.CardView>