<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/cardViewMargin"
    android:backgroundTint="@color/colorPrimary"
    android:elevation="@dimen/cardViewMargin"
    android:gravity="center"
    android:textAlignment="center"
    app:cardCornerRadius="@dimen/cardRadius"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/xLoginBaseView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/colorIcons"
                android:textSize="35sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/xLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:gravity="center"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorIcons"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/xLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorIcons"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/xLoginButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:text="@string/login_using_email"
                android:textColor="@color/colorIcons"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/xLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:gravity="center"
                android:text="@string/login"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_marginTop="2dp"
                android:backgroundTint="@color/fb_color"
                android:elevation="@dimen/cardViewMargin"
                android:gravity="center"
                app:cardCornerRadius="@dimen/cardRadius">

                <Button
                    android:id="@+id/xLoginFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/fb_button"
                    android:elevation="8dp"
                    android:gravity="center" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/xLoginRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/didn_t_sign_up_click_to_register"
                android:textColor="@color/colorIcons"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>